Forward events to the tab strip.

The shadow around the omnibox results popup eats mouse events.
Manually forward events occurring in the shadow area to the
underlying widget to fix the tab strip.

BUG=864963, 838667

Change-Id: I5c6499f5d024863dad611f8670fb12e1a01ff073
Reviewed-on: https://chromium-review.googlesource.com/1144225
Commit-Queue: Avi Drissman <avi@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577293}
Former-commit-id: af7dcaaf7c0cb2f0f3c75626f7acd368bf98287c